[package]
name = "slice_ring_buf"
version = "0.2.6"
authors = ["Billy Messenger <https://github.com/BillyDM>"]
license = "MIT"
keywords = ["ring", "circular", "buffer", "dsp"]
categories = ["data-structures"]
edition = "2018"
description = "A fast ring buffer implementation optimized for working with slices"
repository = "https://github.com/BillyDM/slice_ring_buf"
documentation = "https://docs.rs/slice_ring_buf"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
